<resources>
    <string name="app_name">鱼跃移动巡诊</string>

    <string name="bluetooth_not_available">蓝牙设备不可用</string>
    <string name="print">打印</string>
    <string name="not_connected">尚未连接任何设备</string>
    <string name="read_card">读卡</string>
    <string name="printer_not_connected">打印机未连接</string>
    <string name="connecting_to_printer">正在连接打印机</string>
    <string name="printing">正在打印</string>
    <string name="connect_failed">连接失败</string>
    <string name="no_device_found">未找到设备</string>

    <string name="guest_login">游客登录</string>
    <string name="login_1">请在设备上</string>
    <string name="login_2">刷身份证登录</string>
    <string name="name">姓名：%s</string>
    <string name="gender">性别：%s</string>
    <string name="birthday">生日：%s</string>
    <string name="id">身份证：%s</string>

    <string name="measure_result">当前测量结果</string>
    <string name="history_measure">历史测量结果</string>
    <string name="sbp">收缩压</string>
    <string name="dbp">舒张压</string>
    <string name="pulse_rate">脉　率</string>
    <string name="mmhg">mmHg</string>
    <string name="per_min">/分钟</string>

    <string name="blood_glucose">血糖值</string>
    <string name="mmol">mmol/L</string>
    <string name="measure_time">测量时间</string>
    <string name="all">全部</string>

    <string name="blood_oxygen">血氧值</string>
    <string name="percent">%</string>
    <string name="perfusion_index">灌注指数</string>

    <string name="bg_level_0">偏低</string>
    <string name="bg_level_1">正常</string>
    <string name="bg_level_2">偏高</string>
    <string name="bg_level_3">非常高</string>

    <string name="bp_level_0">理想</string>
    <string name="bp_level_1">正常</string>
    <string name="bp_level_2">边缘</string>
    <string name="bp_level_3">轻度</string>
    <string name="bp_level_4">中度</string>
    <string name="bp_level_5">重度</string>

    <string name="no_data">未查询到数据</string>
</resources>