<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_m"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/circular_rectangle_top_border"
            android:paddingLeft="@dimen/margin_s"
            android:paddingTop="@dimen/margin_ss"
            android:paddingBottom="@dimen/margin_ss">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measure_result"
                style="@style/LabelText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/circular_rectangle_bottom"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="@dimen/margin_s"
                android:paddingRight="@dimen/margin_s"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="28sp"
                    android:text="@string/blood_glucose"/>

                <TextView
                    android:id="@+id/tv_bg_val"
                    android:layout_width="75dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/margin_m"
                    android:layout_marginRight="@dimen/margin_m"
                    android:gravity="center"
                    android:textColor="@color/value"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:background="@color/value_background"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/mmol"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="@dimen/margin_s"
                android:paddingRight="@dimen/margin_s"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="28sp"
                    android:text="@string/measure_time"/>

                <TextView
                    android:id="@+id/tv_measure_time"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/margin_m"
                    android:layout_marginRight="@dimen/margin_m"
                    android:gravity="center"
                    android:textColor="@color/value"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:background="@color/value_background"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_s"
        android:orientation="vertical"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/circular_rectangle_top_border"
            android:paddingLeft="@dimen/margin_s"
            android:paddingTop="@dimen/margin_ss"
            android:paddingBottom="@dimen/margin_ss">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_measure"
                style="@style/LabelText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:background="@color/value_background">

            <com.yuwell.mobilegp.ui.widget.DateRangePicker
                android:id="@+id/date_range_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.yuwell.mobilegp.ui.widget.PopupListView
                android:id="@+id/pop_list"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ExpandableListView
            android:id="@+id/lv_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:groupIndicator="@null"
            android:background="@drawable/circular_rectangle_bottom" />

    </LinearLayout>

</LinearLayout>